--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,206 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
+}
+
+.wrapper {
+	width: 200px;
+	height: 60px;
+	position: relative;
+	z-index: 1;
+}
+
+.circle {
+	width: 20px;
+	height: 20px;
+	position: absolute;
+	border-radius: 50%;
+	background-color: #fff;
+	left: 15%;
+	transform-origin: 50%;
+	animation: circle7124 0.5s alternate infinite ease;
+}
+
+@keyframes circle7124 {
+	0% {
+		top: 60px;
+		height: 5px;
+		border-radius: 50px 50px 25px 25px;
+		transform: scaleX(1.7);
+	}
+
+	40% {
+		height: 20px;
+		border-radius: 50%;
+		transform: scaleX(1);
+	}
+
+	100% {
+		top: 0%;
+	}
+}
+
+.circle:nth-child(2) {
+	left: 45%;
+	animation-delay: 0.2s;
+}
+
+.circle:nth-child(3) {
+	left: auto;
+	right: 15%;
+	animation-delay: 0.3s;
+}
+
+.shadow {
+	width: 20px;
+	height: 4px;
+	border-radius: 50%;
+	background-color: rgba(0, 0, 0, 0.9);
+	position: absolute;
+	top: 62px;
+	transform-origin: 50%;
+	z-index: -1;
+	left: 15%;
+	filter: blur(1px);
+	animation: shadow046 0.5s alternate infinite ease;
+}
+
+@keyframes shadow046 {
+	0% {
+		transform: scaleX(1.5);
+	}
+
+	40% {
+		transform: scaleX(1);
+		opacity: 0.7;
+	}
+
+	100% {
+		transform: scaleX(0.2);
+		opacity: 0.4;
+	}
+}
+
+.shadow:nth-child(4) {
+	left: 45%;
+	animation-delay: 0.2s;
+}
+
+.shadow:nth-child(5) {
+	left: auto;
+	right: 15%;
+	animation-delay: 0.3s;
+}
+
+.card {
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 320px;
+	border-radius: 24px;
+	width: 100%;
+	line-height: 1.6;
+	transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	gap: 24px;
+	padding: 36px;
+	border-radius: 22px;
+	color: #ffffff;
+	overflow: hidden;
+	background: #3e4562;
+	transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.content::before {
+	position: absolute;
+	content: '';
+	top: -4%;
+	left: 50%;
+	width: 90%;
+	height: 90%;
+	transform: translate(-50%);
+	background: #ced8ff;
+	z-index: -1;
+	transform-origin: bottom;
+
+	border-radius: inherit;
+	transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.content::after {
+	position: absolute;
+	content: '';
+	top: -8%;
+	left: 50%;
+	width: 80%;
+	height: 80%;
+	transform: translate(-50%);
+	background: #e7ecff;
+	z-index: -2;
+	transform-origin: bottom;
+	border-radius: inherit;
+	transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.content svg {
+	width: 48px;
+	height: 48px;
+}
+
+.content .para {
+	z-index: 1;
+	opacity: 1;
+	font-size: 18px;
+	transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.content .link {
+	z-index: 1;
+	color: #fea000;
+	text-decoration: none;
+	font-family: inherit;
+	font-size: 16px;
+	transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.content .link:hover {
+	text-decoration: underline;
+}
+
+.card:hover {
+	transform: translate(0px, -16px);
+}
+
+.card:hover .content::before {
+	rotate: -8deg;
+	top: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.card:hover .content::after {
+	rotate: 8deg;
+	top: 0;
+	width: 100%;
+	height: 100%;
 }
